--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         crossorigin
     ></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script type="text/babel" src="./props.js">
+    <script type="text/babel" src="./childrent_props&render_props.js">
         // console.log(React);
         // console.log(React.version);
     </script>
